# scaleform_sdk

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  build_gfxplayertinyvulkan.ps1  build_render_vulkan.ps1
.github/workflows/: visual-regression.yml
Apps/: CMakeLists.txt
Apps/Samples/GFxPlayerTiny/: GFxPlayerTinyD3D1x.cpp  GFxPlayerTinyVulkan.cpp
Apps/Samples/RenderTexture/: VulkanAppBase.cpp  VulkanAppBase.h
Include/: GFx.h  GFxCompat.h  GFxConfig.h  GFxConfigAddons.h  GFxVersion.h  GFx_Renderer_Vulkan.h
Projects/: libgfxrender_vulkan.txt
Projects/Win32/Property Sheets/: GFx_Renderer_Vulkan.props
Src/: CMakeLists.txt
Src/GFx/: GFx_AS2Support.cpp  GFx_AS3Support.cpp  GFx_ASMovieRootBase.h  GFx_ASString.cpp  GFx_ASString.h  GFx_ASUtils.cpp  GFx_ASUtils.h  GFx_DisplayList.cpp  GFx_DisplayList.h  GFx_DisplayObjContainer.cpp  GFx_DisplayObjContainer.h  GFx_DisplayObject.cpp  GFx_DisplayObject.h  GFx_DrawText.cpp  GFx_DrawText.h  GFx_Event.h  GFx_FilterDesc.cpp  GFx_FontGlyphPacker.h  GFx_FontResource.cpp  GFx_Gesture.cpp  GFx_Gesture.h  GFx_ImageCreator.cpp  GFx_ImagePacker.cpp  GFx_Input.cpp  GFx_Input.h  GFx_InteractiveObject.cpp  GFx_LoadProcess.cpp  GFx_LoadProcess.h  GFx_Loader.cpp  GFx_Loader.h  GFx_LoaderImpl.cpp  GFx_LoaderImpl.h  GFx_LoaderUtil.cpp  GFx_MovieDef.cpp  GFx_MovieDef.h  GFx_Player.h  GFx_PlayerImpl.cpp  GFx_PlayerImpl.h  GFx_PlayerStats.h  GFx_PlayerTasks.cpp  (+12 more)
Src/GFx/AMP/: Amp_Interfaces.h  Amp_Message.cpp  Amp_Message.h  Amp_MessageRegistry.cpp  Amp_MessageRegistry.h  Amp_ObjectsLog.cpp  Amp_ObjectsLog.h  Amp_ProfileFrame.cpp  Amp_ProfileFrame.h  Amp_Server.cpp  Amp_Server.h  Amp_ServerCallbacks.cpp  Amp_ServerCallbacks.h  Amp_Stream.cpp  Amp_Stream.h  Amp_ThreadMgr.cpp  Amp_ThreadMgr.h  Amp_ViewStats.cpp  Amp_ViewStats.h  Amp_Visitors.h
Src/GFx/AS2/: AS2_Action.cpp  AS2_ActionTypes.h  AS2_AmpMarker.cpp  AS2_AmpMarker.h  AS2_AvmCharacter.cpp  AS2_AvmCharacter.h  AS2_AvmSprite.cpp  AS2_AvmSprite.h  AS2_AvmTextField.cpp  AS2_AvmTextField.h  AS2_ColorTransform.cpp  AS2_Date.cpp  AS2_GFxValueImpl.cpp  AS2_Math.cpp  AS2_MovieRoot.cpp  AS2_MovieRoot.h  AS2_NumberObject.cpp  AS2_Object.cpp  AS2_Object.h  AS2_RefCountCollector.h  AS2_StyleSheet.cpp  AS2_Value.cpp  AS2_Value.h
Src/GFx/AS3/: AS3_AOTC2.h  AS3_AsString.cpp  AS3_AsString.h  AS3_AvmBitmap.cpp  AS3_AvmDisplayObj.cpp  AS3_AvmDisplayObjContainer.cpp  AS3_AvmDisplayObjContainer.h  AS3_AvmSprite.cpp  AS3_AvmSprite.h  AS3_AvmStage.cpp  AS3_AvmTextField.cpp  AS3_AvmTextField.h  AS3_CodeExecute.cpp  AS3_GC.cpp  AS3_GC.h  AS3_GFxValueImpl.cpp  AS3_Global.h  AS3_Instance.cpp  AS3_Instance.h  AS3_IntervalTimer.cpp  AS3_IntervalTimer.h  AS3_Marshalling.h  AS3_MovieRoot.cpp  AS3_MovieRoot.h  AS3_ObjCollector.cpp  AS3_ObjCollector.h  AS3_Object.cpp  AS3_Object.h  AS3_Slot.cpp  AS3_Slot.h  AS3_SocketThreadMgr.cpp  AS3_SocketThreadMgr.h  AS3_StringManager.cpp  AS3_StringManager.h  AS3_Tracer.cpp  AS3_Tracer.h  AS3_Traits.cpp  AS3_Traits.h  AS3_VM.cpp  AS3_VM.h  (+8 more)
Src/GFx/IME/: GFxKoreanIME.cpp  GFx_IMEManager.h
Src/GFx/Text/: Text_EditorKit.cpp  Text_EditorKit.h  Text_StyleSheet.cpp
Src/Kernel/: SF_AmpInterface.cpp  SF_AmpInterface.h  SF_ArrayStaticBuff.h  SF_Debug.h  SF_File.h  SF_FileFILE.cpp  SF_Hash.h  SF_Log.cpp  SF_Math.h  SF_MemReport.cpp  SF_MemoryHeap.h  SF_MsgFormat.cpp  SF_MsgFormat.h  SF_RefCount.h  SF_Stats.cpp  SF_Std.cpp  SF_Std.h  SF_String.cpp  SF_System.cpp  SF_Threads.h  SF_ThreadsWinAPI.cpp  SF_Types.h  SF_UTF8Util.cpp  SF_UTF8Util.h  SF_WString.cpp  SF_WString.h
Src/Kernel/HeapMH/: HeapMH_AllocEngine.cpp  HeapMH_DebugInfo.cpp
Src/Kernel/HeapPT/: HeapPT_AllocEngine.cpp  HeapPT_DebugInfo.cpp  HeapPT_DebugInfo.h
Src/Platform/: Platform.cpp  Platform.h  Platform_D3D1x.cpp  Platform_D3D9.cpp  Platform_RTCommandQueue.cpp  Platform_RTCommandQueue.h  Platform_RenderHALThread.cpp  Platform_RenderHALThread.h  Platform_RenderThread.cpp  Platform_RenderThread.h  Platform_WinAPI.cpp  Platform_WinAPI_GL.cpp  Platform_XInput.cpp  Platform_XInput.h
Src/Render/: Render_Buffer.h  Render_BufferGeneric.cpp  Render_BufferGeneric.h  Render_Bundle.h  Render_CacheEffect.cpp  Render_CacheEffect.h  Render_Constants.h  Render_Context.cpp  Render_Context.h  Render_CxForm.cpp  Render_CxForm.h  Render_DrawableImage.cpp  Render_DrawableImage.h  Render_DrawableImage_HW.cpp  Render_DrawableImage_Queue.cpp  Render_DrawableImage_Queue.h  Render_Events.h  Render_FilterParams.h  Render_Filters.cpp  Render_Filters.h  Render_FiltersLE.h  Render_Font.h  Render_FontCacheHandle.h  Render_GlyphCache.cpp  Render_GlyphCache.h  Render_GlyphCacheConfig.h  Render_GlyphQueue.cpp  Render_GlyphQueue.h  Render_Gradients.cpp  Render_HAL.cpp  Render_HAL.h  Render_Image.cpp  Render_Image.h  Render_Matrix2x4.cpp  Render_Matrix2x4.h  Render_Matrix3x4.cpp  Render_Matrix3x4.h  Render_Matrix4x4.cpp  Render_Matrix4x4.h  Render_MatrixPool.cpp  (+52 more)
Src/Render/D3D1x/: D3D1x_Config.h  D3D1x_Events.h  D3D1x_HAL.cpp  D3D1x_HAL.h  D3D1x_MeshCache.cpp  D3D1x_MeshCache.h  D3D1x_Shader.cpp  D3D1x_Shader.h  D3D1x_ShaderDescs.cpp  D3D1x_ShaderDescs.h  D3D1x_Sync.h  D3D1x_Texture.cpp  D3D1x_Texture.h
Src/Render/D3D9/: D3D9_Events.h  D3D9_HAL.cpp  D3D9_HAL.h  D3D9_MeshCache.cpp  D3D9_MeshCache.h  D3D9_Shader.cpp  D3D9_Shader.h  D3D9_ShaderBinary.cpp  D3D9_ShaderDescs.cpp  D3D9_ShaderDescs.h  D3D9_Sync.h  (+2 more)
Src/Sound/: Sound_SoundEventWwise.h  Sound_SoundRendererFMOD.cpp  Sound_SoundRendererFMOD.h
Src/Video/: Video_CriHeap.cpp  Video_CriHeap.h  Video_CriMvFileReader.cpp  Video_CriMvFileReader.h  Video_CriMvSoundGateway.cpp  Video_CriMvSoundGateway.h  Video_CriMvSystemTimer.cpp  Video_CriMvSystemTimer.h  Video_Video.cpp  Video_Video.h  Video_VideoImage.cpp  Video_VideoImage.h  Video_VideoPC.cpp  Video_VideoPlayerImpl.cpp  Video_VideoPlayerImpl.h
Tests/: CMakeLists.txt
Tests/VisualRegression/: .gitignore  CMakeLists.txt  CaptureD3D11.cpp  CaptureVulkan.cpp  README.md  TestManifest.json  build_tests.ps1  compare_images.py  compare_reference.py  run_all.py  update_reference.py
cmake/: ScaleformCompileFlags.cmake  fmod_compat.cpp
(+2182 files in other folders)
